fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -76,5 +76,5 @@ a.button:active {
 }
 
 #socialIcon {
-  margin-right: : 20px;
+  margin-right: 20px;
 }
